
Revision XX / 2005-XX-XX / Benjamin Reitzammer

* started fresh with version 0.5, thrown out obsolete junk,
  will only develop one version of roosster, which will be a GUI
  version (based on http://thinlet.sf.net) that's got a web
  server running in the background, that offers an API (for 
  bookmarklet and scripting support)
* implemented autocomplete for tags
* implemented pager
* implemented clickable links (needs 'mozilla' executable in PATH on unix/linux)o
* embedded jetty server
* implemented roosster API, is available at /roosster/api on localhost at 
  specified port
* implemented first draft of del.icio.us sync
* add button for viewing cached copy
* shows dates in edit screen

