@@ -1,5 +1,8 @@
 save.success=The Entry was saved successfully.
 add.success=The Entry was successfully added to the index!
+delete.success=The Entry was successfully deleted from the index!
+
+delete.failure=An error occurred while deleting the Entry! The details have been logged!
 
 param.empty.url=The 'URL'-field is not allowed to be empty!
 param.invalid.url=The syntax of the given URL is invalid!
