@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <!-- generated by ThinG, the Thinlet GUI editor -->
 <panel columns="1" weightx="1" weighty="1">
-    <menubar>
-        <menu text="File" mnemonic="0">
-            <!-- <menuitem text="Open ..." accelerator="Ctrl O" mnemonic="0" action="openIndex()"/> -->
-        </menu>
-        <menu text="Sync">
-            <menuitem text="Sync del.icio.us ..." accelerator="Ctrl D" mnemonic="5" action="openDeliciousSync()"/>
-        </menu>
-        <menu text="Help"/>
-    </menubar>
+    <panel gap="4" top="4" bottom="4" weightx="1">
+        <menubar weightx="1">
+            <menu text="File" mnemonic="0">
+                <!-- <menuitem text="Open ..." accelerator="Ctrl O" mnemonic="0" action="openIndex()"/> -->
+            </menu>
+            <menu text="Sync">
+                <menuitem text="Sync del.icio.us ..." accelerator="Ctrl D" mnemonic="5" action="openDeliciousSync()"/>
+            </menu>
+            <menu text="Help"/>
+        </menubar>
+    </panel>
     <panel gap="4" top="4" left="4" bottom="4" right="4">
         <label font="bold" foreground="#00df00" name="infomessagesLabel" text=" "/>
         <label font="bold" foreground="#df0000" name="errormessagesLabel"/>
@@ -64,11 +66,13 @@
                         <textfield name="authorField"/>
                         <label for="authoremailField" text="Author-Email"/>
                         <textfield name="authoremailField"/>
+                        <label for="publicprivateField" text="Public ?"/>
+                        <checkbox name="publicprivateField"/>
                         <separator colspan="2"/>
                         <label text="Actions"/>
                         <panel columns="2" weightx="1">
                             <button name="cachedcopyButton" text="Cached Copy" action="goUrl(this)" />
-                            <button text="Test Copy" />
+                            <button name="deleteButton" text="Delete Entry" action="doDelete()"/>
                         </panel>
                         <separator colspan="2"/>
                         <label text="Added"/>
@@ -80,7 +84,7 @@
                         <label text="Edited"/>
                         <label name="editeddateLabel"/>
                         <label/>
-                        <button action="doSave(titleField.text, noteField.text, typeField.text, authorField.text, authoremailField.text, tagsList)" halign="right" text="Save"/>
+                        <button action="doSave(titleField.text, noteField.text, typeField.text, authorField.text, authoremailField.text, publicprivateField.selected, tagsList)" halign="right" text="Save"/>
                     </panel>
                     <panel columns="2" weightx="1">
                         <label colspan="2" for="tagsField" mnemonic="1" text="Tags" weightx="1"/>
